# game

./: CMakeLists.txt
include/: animation.h  border_rect.h  direction.h  game.h  range.h  textures.h  view.h
src/: animation.cpp  border_rect.cpp  direction.cpp  game.cpp  main.cpp  range.cpp  view.cpp
src/interface/include/: interface.h  interface_build_object.h  interface_buildings.h  interface_object.h
src/interface/src/: interface.cpp  interface_build_object.cpp  interface_buildings.cpp  interface_object.cpp
src/objects/include/: house.h  object.h  object_manufacture.h  person.h
src/objects/src/: house.cpp  object.cpp  object_manufacture.cpp  person.cpp
